<?xml version="1.0" encoding="utf-8"?>
<!-- new_post_bottom_sheet.xml -->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="16dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/profileView"
            android:layout_width="60dp"
            android:layout_height="match_parent"
            android:contentDescription="@string/profile_image"
            android:src="@mipmap/default_profile_image" />

        <EditText
            android:id="@+id/postContentEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:background="@null"
            android:hint="@string/whats_on_your_mind"
            android:inputType="textMultiLine"
            android:minLines="3" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/mediaPreviewContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:orientation="horizontal"
        android:visibility="gone" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/addImageButton"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:contentDescription="@string/add_image"
            android:src="@drawable/image" />

        <ImageButton
            android:id="@+id/cameraButton"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:contentDescription="@string/add_image"
            android:src="@drawable/camera" />

        <View
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_weight="1" />

        <Button
            android:id="@+id/postButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/post" />
    </LinearLayout>
</LinearLayout>