<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/editProfileToolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/primaryColor_light"
        android:elevation="4dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageButton
            android:id="@+id/backButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:contentDescription="@string/back"
            android:padding="8dp"
            android:src="@android:drawable/ic_menu_revert" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/profile"
            android:textColor="#000000"
            android:textSize="18sp"
            android:textStyle="bold"
            tools:layout_editor_absoluteX="162dp"
            tools:layout_editor_absoluteY="20dp" />

        <Button
            android:id="@+id/saveProfileButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:background="@android:color/transparent"
            android:text="@string/save"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:visibility="visible"
            tools:layout_editor_absoluteX="315dp"
            tools:layout_editor_absoluteY="8dp" />
    </androidx.appcompat.widget.Toolbar>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editProfileToolbar">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="0dp">


            <FrameLayout
                android:id="@+id/coverPhotoContainer"
                android:layout_width="match_parent"
                android:layout_height="150dp"

                >

                <ImageView
                    android:id="@+id/coverPhotoImageView"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:contentDescription="@string/cover_photo"
                    android:scaleType="centerCrop"
                    android:src="@android:color/darker_gray"
                    tools:ignore="ImageContrastCheck" />

                <ImageButton
                    android:id="@+id/editCoverPhotoButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:background="@android:color/transparent"
                    android:contentDescription="@string/edit_cover_photo"
                    android:padding="8dp"
                    android:src="@android:drawable/ic_menu_camera" />

            </FrameLayout>

            <FrameLayout
                android:id="@+id/profilePhotoContainer"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginEnd="295dp"
                android:layout_marginRight="295dp"
                android:visibility="visible"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent">

                <ImageView
                    android:id="@+id/profileView"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@android:color/white"
                    android:contentDescription="@string/profile_photo"
                    android:padding="2dp"
                    android:scaleType="centerCrop"
                    android:src="@android:drawable/ic_menu_gallery" />

                <ImageButton
                    android:id="@+id/editProfilePhotoButton"
                    android:layout_width="36dp"
                    android:layout_height="36dp"
                    android:layout_gravity="bottom|end"
                    android:background="@android:drawable/ic_menu_edit"
                    android:contentDescription="@string/edit_profile_photo" />
            </FrameLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/displayNameLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:clickable="false"
                    android:focusable="false"
                    android:hint="@string/display_name"
                    android:orientation="vertical"
                    app:endIconCheckable="false">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/displayNameEditText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:clickable="true"
                        android:focusable="auto"
                        android:inputType="textPersonName"
                        android:maxLength="50" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/usernameLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:clickable="false"
                    android:focusable="false"
                    android:hint="@string/username"
                    app:endIconCheckable="false">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/usernameEditText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:clickable="false"
                        android:focusable="false"
                        android:inputType="text"
                        android:maxLength="15" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/bioLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:clickable="false"
                    android:focusable="false"
                    android:hint="@string/bio"
                    app:endIconCheckable="false">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/bioEditText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:clickable="true"
                        android:focusable="auto"
                        android:gravity="top"
                        android:inputType="textMultiLine"
                        android:lines="4"
                        android:maxLength="160" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/locationLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:clickable="false"
                    android:focusable="false"
                    android:hint="@string/location"
                    app:endIconCheckable="false">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/locationEditText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:clickable="true"
                        android:focusable="auto"
                        android:inputType="text"
                        android:maxLength="30" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/websiteLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:clickable="false"
                    android:focusable="false"
                    android:hint="@string/website"
                    app:endIconCheckable="false">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/websiteEditText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:clickable="true"
                        android:focusable="auto"
                        android:inputType="textUri"
                        android:maxLength="100" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/dobLayout"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="16dp"
                    android:clickable="false"
                    android:focusable="false"
                    android:hint="@string/date_of_birth"
                    app:endIconCheckable="false">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/dobEditText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:clickable="true"
                        android:focusable="auto"
                        android:inputType="none" />

                </com.google.android.material.textfield.TextInputLayout>

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="12dp"
                    android:layout_weight="1" />

                <Button
                    android:id="@+id/delete_button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:backgroundTint="@color/button_danger"
                    android:insetTop="8dp"
                    android:text="Delete profile" />

            </LinearLayout>

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>